# UGPUPower

./: .gitignore  README.md  build.py  build.requirements.txt  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
miniperf/: __init__.py  adb_helper.py  api.py  app.py
miniperf/ui/: README.md  package.json  vite.config.js
miniperf/ui/src/: App.css  App.jsx  index.css
miniperf/ui/src/hooks/: useInitialState.ts
miniperf/ui/src/pages/Dashboard/: index.css  index.jsx  index.module.css
miniperf/ui/src/pages/Dashboard/components/: ConsoleCard.jsx  DemoChar.jsx  PackageSelect.jsx  PowerChart.jsx  TempChart.jsx
